Add Heroku deployment step into github workflow

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,3 +26,10 @@ jobs:
       uses: codecov/codecov-action@v2
       with:
         files: ./target/site/jacoco/jacoco.xml
+
+    - name: Deploy to Heroku
+      uses: akhileshns/heroku-deploy@v3.12.12
+      with:
+        heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+        heroku_app_name: 'convertbotapp'
+        heroku_email: 'antonpuckich@gmail.com'
